Fix T101746: Node copy and paste changes multi-input socket order

The multi-input indices have to be copied, and updated after
pasting in case all original connected nodes weren't copied.